Revert "Images are now pulled from Instagram instead of Flickr."
This reverts commit 8b57b971e16dd481147751db1c10fdd43b86dd1a.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 	<div id="content">
 		<ul id="gallery"></ul>
+		<!-- <ul id="reflections"></ul> -->
 	</div>
 
 	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
